fix: access to Item by direct link. Need to fix vert long tablet overflow

--- a/styles.css
+++ b/styles.css
@@ -466,7 +466,6 @@ path.blue{
         display: none;
     }
 
-
 }
 
 /*длинный вариант - в столбик, но есть превьюшки*/
@@ -555,6 +554,10 @@ path.blue{
             display: flex;
             align-items: center;font-weight: bold;
         }
+        .item-selector-and-label select{
+            margin:10px;
+        }
+
         .item-text-availableSizes{
             margin-right: 10px;
         }
